unpackaged/main/default/objects/Opportunity/fields/PF_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>PF_Legal_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field has been created to capture the legal entity for which the opportunity has to be created</description>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>