unpackaged/main/default/objects/Opportunity/fields/Piste_source__c.field-meta.xml
<CustomField>
    <fullName>Piste_source__c</fullName>
    <description>champs remplis depuis la piste lors de la conversion .</description>
    <label>Piste source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>