unpackaged/main/default/objects/Opportunity/fields/Porte_de_sortie__c.field-meta.xml
<CustomField>
    <fullName>Porte_de_sortie__c</fullName>
    <inlineHelpText>Nombre de mois</inlineHelpText>
    <label>Porte de sortie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>