unpackaged/main/default/objects/Opportunity/fields/PRef__c.field-meta.xml
<CustomField>
    <fullName>PRef__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Marge théorique loyer client globale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>