unpackaged/main/default/objects/Opportunity/fields/PrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Devis principal SAP CPQ</description>
    <label>Devis principal</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>