unpackaged/main/default/objects/Opportunity/fields/Prise_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Prise_de_commande__c</fullName>
    <formula>Quantite__c  *  LoyerMensuel__c  * (       ROUND(((Date_Reprise__c  -  Date_Livraison__c) / 30) ,0)    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prise de commande</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>