unpackaged/main/default/objects/Opportunity/fields/Prix_0_Km_Devis__c.field-meta.xml
<CustomField>
    <fullName>Prix_0_Km_Devis__c</fullName>
    <label>Prix 0 Km (Devis)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>