unpackaged/main/default/objects/Opportunity/fields/prix_de_vente__c.field-meta.xml
<CustomField>
    <fullName>prix_de_vente__c</fullName>
    <label>prix de vente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>