unpackaged/main/default/objects/Opportunity/fields/Probabilite_signature__c.field-meta.xml
<CustomField>
    <fullName>Probabilite_signature__c</fullName>
    <inlineHelpText>Indiquer selon votre feeling la probabilité de signer l&#39;opportunité</inlineHelpText>
    <label>Probabilité signature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0% (Perdu)</fullName>
            </value>
            <value>
                <fullName>20% (Peu probable)</fullName>
            </value>
            <value>
                <fullName>50% (Probable)</fullName>
            </value>
            <value>
                <fullName>80% (Très probable)</fullName>
            </value>
            <value>
                <fullName>100% (Signé)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>