unpackaged/main/default/objects/Opportunity/fields/Processus_d_approbation_declenche__c.field-meta.xml
<CustomField>
    <fullName>Processus_d_approbation_declenche__c</fullName>
    <label>Processus d’approbation déclenché</label>
    <length>255</length>
    <type>Text</type>
</CustomField>