unpackaged/main/default/objects/Opportunity/fields/Qu_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Qu_Mileage__c</fullName>
    <formula>Quantite__c * Kilometrage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qu*Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>