unpackaged/main/default/objects/Opportunity/fields/QuantiteRachatAvecRelocation__c.field-meta.xml
<CustomField>
    <fullName>QuantiteRachatAvecRelocation__c</fullName>
    <label>Quantité rachat avec relocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>