unpackaged/main/default/objects/Opportunity/fields/QuantiteRachatSansRelocation__c.field-meta.xml
<CustomField>
    <fullName>QuantiteRachatSansRelocation__c</fullName>
    <label>Quantité rachat sans relocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>