unpackaged/main/default/objects/Opportunity/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>RYF_pourcentage__c* Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>%*Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>