unpackaged/main/default/objects/Opportunity/fields/Quantity_DNP_validation_time__c.field-meta.xml
<CustomField>
    <fullName>Quantity_DNP_validation_time__c</fullName>
    <formula>DNP_validation_time__c *  Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity*DNP validation time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>