unpackaged/main/default/objects/Opportunity/fields/Quantity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Duration__c</fullName>
    <formula>DureeContrat__c *  Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity*Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>