unpackaged/main/default/objects/Opportunity/fields/Quantity_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Mileage__c</fullName>
    <formula>Quantite__c *  Kilometrage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity*Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>