unpackaged/main/default/objects/Opportunity/fields/Quantity_Opp_life_time__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Opp_life_time__c</fullName>
    <formula>Opp_life_time__c *  Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity*Opp life time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>