unpackaged/main/default/objects/Opportunity/fields/R_glement_Ult_rieur_sur_facture__c.field-meta.xml
<CustomField>
    <fullName>R_glement_Ult_rieur_sur_facture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Règlement Ultérieur sur facture</label>
    <type>Checkbox</type>
</CustomField>