unpackaged/main/default/objects/Opportunity/fields/RachatParc__c.field-meta.xml
<CustomField>
    <fullName>RachatParc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rachat de parc</label>
    <type>Checkbox</type>
</CustomField>