unpackaged/main/default/objects/Opportunity/fields/RaisonCloture__c.field-meta.xml
<CustomField>
    <fullName>RaisonCloture__c</fullName>
    <label>Raison de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Annulation</fullName>
            </value>
            <value>
                <fullName>Refus (Interne)</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>