unpackaged/main/default/objects/Opportunity/fields/Ratio_CC_PAT__c.field-meta.xml
<CustomField>
    <fullName>Ratio_CC_PAT__c</fullName>
    <formula>( LoyerMensuel__c * DureeContrat__c   )/( PAT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio CC/PAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>