unpackaged/main/default/objects/Opportunity/fields/RatioCC_PAT__c.field-meta.xml
<CustomField>
    <fullName>RatioCC_PAT__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Ratio CC/PAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>