unpackaged/main/default/objects/Opportunity/fields/RatioCCPATCPQ__c.field-meta.xml
<CustomField>
    <fullName>RatioCCPATCPQ__c</fullName>
    <description>Carnet de commande brut / Total prix d’achat (Somme PAT)</description>
    <formula>CarnetCommandeBrutList__c /  Total_Prix_d_achat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOI pondéré global</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>