unpackaged/main/default/objects/Opportunity/fields/RCCR__c.field-meta.xml
<CustomField>
    <fullName>RCCR__c</fullName>
    <description>GFC-1030</description>
    <formula>CASE(
PaysRegionPF__c ,

&quot;DRO IDF 1&quot;,
&quot;RCCR IDF 1&quot;,

&quot;DRO IDF 2&quot;,
&quot;RCCR IDF 2&quot;,

&quot;DRO Nord 5&quot;,
&quot;RCCR Nord-Ouest 1&quot;,
&quot;DRO Nord 6&quot;,
&quot;RCCR Nord-Ouest 1&quot;,

&quot;DRO Nord 4&quot;,
&quot;RCCR Nord-Ouest 2&quot;,

&quot;DRO Nord 7&quot;,
&quot;RCCR Nord-Centre 1&quot;,

&quot;DRO Nord 1&quot; ,
&quot;RCCR Nord-Centre 2&quot;,

&quot;DRO Nord 2&quot;,
&quot;RCCR Nord-Est&quot;,
&quot;DRO Nord 3&quot;,
&quot;RCCR Nord-Est&quot;,

&quot;DRO Sud 5&quot;,
&quot;RCCR Sud-Ouest 1&quot;,


&quot;DRO Sud 6&quot;,
&quot;RCCR Sud-Ouest 2&quot;,

&quot;DRO Sud 1&quot;,
&quot;RCCR Sud-Centre&quot;,
&quot;DRO Sud 7&quot;,
&quot;RCCR Sud-Centre&quot;,

&quot;DRO Sud 4&quot;,
&quot;RCCR Sud-Centre&quot;,

&quot;DRO Sud 2&quot;,
&quot;RCCR Sud-Est&quot;,
&quot;DRO Sud 3&quot;,
&quot;RCCR Sud-Est&quot;,

&quot;-&quot;)</formula>
    <label>RCCR</label>
    <type>Text</type>
</CustomField>