unpackaged/main/default/objects/Opportunity/fields/Remise__c.field-meta.xml
<CustomField>
    <fullName>Remise__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Remise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>