unpackaged/main/default/objects/Opportunity/fields/Remise_client_ponderee_globale__c.field-meta.xml
<CustomField>
    <fullName>Remise_client_ponderee_globale__c</fullName>
    <description>GFC-2913</description>
    <formula>Somme_Remise_MontantTotalLocation__c /  Somme_des_montant_total_de_la_location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise client pondérée globale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>