unpackaged/main/default/objects/Opportunity/fields/Remise_pied_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Remise_pied_de_facture__c</fullName>
    <label>Remise pied de facture (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>