unpackaged/main/default/objects/Opportunity/fields/Remise_quantitative__c.field-meta.xml
<CustomField>
    <fullName>Remise_quantitative__c</fullName>
    <label>Remise quantitative (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>