unpackaged/main/default/objects/Opportunity/fields/RentPrimaryQuoteAuthorized__c.field-meta.xml
<CustomField>
    <fullName>RentPrimaryQuoteAuthorized__c</fullName>
    <label>Loyer devis principal autorisé</label>
    <summarizedField>Quote__c.Loyer_total_periodique_HT__c</summarizedField>
    <summaryFilterItems>
        <field>Quote__c.Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote__c.Statut__c</field>
        <operation>equals</operation>
        <value>Autorisé, Devis Envoyé, Devis validé, Contrat envoyé, Contrat signé</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>