unpackaged/main/default/objects/Opportunity/fields/RVB__c.field-meta.xml
<CustomField>
    <fullName>RVB__c</fullName>
    <label>(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>