unpackaged/main/default/objects/Opportunity/fields/RYF__c.field-meta.xml
<CustomField>
    <fullName>RYF__c</fullName>
    <formula>IF( ISPICKVAL(PaysRegionPF__c, &#39;USA&#39;),  RYF_Devis__c,
  IF(
     AND(
           NOT(ISNULL(Prix_0_Km_Devis__c   )),
           NOT(ISNULL(Prix_des_kms_inclus_les_100_kms_Devis__c   )),
           NOT(ISNULL(Kilometrage__c  )),
           NOT(ISNULL(LoyerMensuel__c  ))
     ),
    (LoyerMensuel__c  / ( Prix_0_Km_Devis__c   +( Kilometrage__c  * ( Prix_des_kms_inclus_les_100_kms_Devis__c   /100 ) ) ) -1)
,
IF(NOT(ISNULL( RYF_pourcentage__c )),RYF_pourcentage__c , RVB__c )
)
)</formula>
    <label>RYF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>