unpackaged/main/default/objects/Opportunity/fields/RYF_Devis__c.field-meta.xml
<CustomField>
    <fullName>RYF_Devis__c</fullName>
    <label>RYF Devis (Tarifé)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>