unpackaged/main/default/objects/Opportunity/fields/RYF_pourcentage__c.field-meta.xml
<CustomField>
    <fullName>RYF_pourcentage__c</fullName>
    <label>RYF (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>