unpackaged/main/default/objects/Opportunity/fields/SalesAreaData__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vue commerciale client sur la quelle l&#39;opportunité a été créé.</description>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>