unpackaged/main/default/objects/Opportunity/fields/Sans_Activites_En_Cours__c.field-meta.xml
<CustomField>
    <fullName>Sans_Activites_En_Cours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans Activités en cours</label>
    <type>Checkbox</type>
</CustomField>