unpackaged/main/default/objects/Opportunity/fields/Sans_Activites_Terminees__c.field-meta.xml
<CustomField>
    <fullName>Sans_Activites_Terminees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans Activités terminées</label>
    <type>Checkbox</type>
</CustomField>