unpackaged/main/default/objects/Opportunity/fields/Sans_assurance__c.field-meta.xml
<CustomField>
    <fullName>Sans_assurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans assurance</label>
    <type>Checkbox</type>
</CustomField>