unpackaged/main/default/objects/Opportunity/fields/Sans_Concurrent__c.field-meta.xml
<CustomField>
    <fullName>Sans_Concurrent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Aucun concurrent identifié sur cette oppportunité</description>
    <inlineHelpText>Cochez cette case si aucun concurrent n&#39;est identifié sur cette opportunité</inlineHelpText>
    <label>Aucun concurrent identifié</label>
    <type>Checkbox</type>
</CustomField>