unpackaged/main/default/objects/Opportunity/fields/SBQQ__OrderGroupID__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OrderGroupID__c</fullName>
    <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&#39;s ID. This is not a reference.</description>
    <inlineHelpText>Identificateur unique de la transaction du nouveau devis d’amendement, qui correspond à l&#39;ID du devis principal d&#39;origine.</inlineHelpText>
    <label>Order Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>