unpackaged/main/default/objects/Opportunity/fields/Service_Tarification_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Tarification_Email__c</fullName>
    <defaultValue>&quot;ddt@petitforestier.eu&quot;</defaultValue>
    <label>Service Tarification Email</label>
    <type>Email</type>
</CustomField>