unpackaged/main/default/objects/Opportunity/fields/SignNewFrameworkAgreements__c.field-meta.xml
<CustomField>
    <fullName>SignNewFrameworkAgreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faire signer les nouveaux accords ?</label>
    <type>Checkbox</type>
</CustomField>