unpackaged/main/default/objects/Opportunity/fields/Site_de_Livraison_Adresse__c.field-meta.xml
<CustomField>
    <fullName>Site_de_Livraison_Adresse__c</fullName>
    <label>Site de Livraison / Adresse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>