unpackaged/main/default/objects/Opportunity/fields/Somme_Marge_Montant_de_location__c.field-meta.xml
<CustomField>
    <fullName>Somme_Marge_Montant_de_location__c</fullName>
    <description>GFC-2913</description>
    <label>Somme Marge*Montant de location</label>
    <summarizedField>OpportunityLineItem.Marge_Montant_de_location__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductCode__c</field>
        <operation>equals</operation>
        <value>SAPCPQ_Produit</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>