unpackaged/main/default/objects/Opportunity/fields/SommePAT__c.field-meta.xml
<CustomField>
    <fullName>SommePAT__c</fullName>
    <description>Alimenté par SAP CPQ</description>
    <label>Somme des PAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>