unpackaged/main/default/objects/Opportunity/fields/SourceOpportunite__c.field-meta.xml
<CustomField>
    <fullName>SourceOpportunite__c</fullName>
    <inlineHelpText>Préciser comment l&#39;opportunité a été  identifiée et remontée dans le pipeline.</inlineHelpText>
    <label>Source de l&#39;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achat Fichier</fullName>
            </value>
            <value>
                <fullName>Annuaire</fullName>
            </value>
            <value>
                <fullName>Appel Entrant</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>E-mailing</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Mailing / Courrier</fullName>
            </value>
            <value>
                <fullName>Opération Prospection</fullName>
            </value>
            <value>
                <fullName>Pages Jaunes</fullName>
            </value>
            <value>
                <fullName>Repérage</fullName>
            </value>
            <value>
                <fullName>Salon</fullName>
            </value>
            <value>
                <fullName>Site PF</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>