unpackaged/main/default/objects/Opportunity/fields/SousFamille__c.field-meta.xml
<CustomField>
    <fullName>SousFamille__c</fullName>
    <label>Sous-famille</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeProduits__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>N/A (Carrosseries)</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>SALON</fullName>
            </value>
            <value>
                <fullName>VITRINE</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>P (Frigo)</fullName>
            </value>
            <value>
                <fullName>S (Frigo)</fullName>
            </value>
            <value>
                <fullName>T (Frigo)</fullName>
            </value>
            <value>
                <fullName>V (Frigo)</fullName>
            </value>
            <value>
                <fullName>P (Sec)</fullName>
            </value>
            <value>
                <fullName>T (Sec)</fullName>
            </value>
            <value>
                <fullName>V (Sec)</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>V (Dry)</fullName>
            </value>
            <value>
                <fullName>L (Dry)</fullName>
            </value>
            <value>
                <fullName>C (Dry)</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>S (Dry)</fullName>
            </value>
            <value>
                <fullName>MEDFOOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>