unpackaged/main/default/objects/Opportunity/fields/Statut_demande_agrement__c.field-meta.xml
<CustomField>
    <fullName>Statut_demande_agrement__c</fullName>
    <label>Statut demande agrément</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Réalisée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>