unpackaged/main/default/objects/Opportunity/fields/Statut_validation__c.field-meta.xml
<CustomField>
    <fullName>Statut_validation__c</fullName>
    <label>Statut validation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En cours validation Commerce</fullName>
            </value>
            <value>
                <fullName>En cours validation Finance</fullName>
            </value>
            <value>
                <fullName>Refusé Commerce</fullName>
            </value>
            <value>
                <fullName>Refusé Finance</fullName>
            </value>
            <value>
                <fullName>Validée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>